--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-
-streamlit==1.28.1
-pandas==2.1.3
-numpy==1.26.4
-plotly==5.18.0
-folium==0.15.1
-streamlit-folium==0.7.0
-openai>=1.0.0
+streamlit>=1.28.0
+pandas>=2.0.0
+numpy>=1.24.0
+plotly>=5.17.0
+folium>=0.14.0
+streamlit-folium>=0.7.0
+openai>=1.3.0
+python-dotenv>=1.0.0
