--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ numpy>=1.24.0
 plotly>=5.17.0
 folium>=0.14.0
 streamlit-folium>=0.7.0
-openai>=1.3.0
+google-generativeai>=0.3.0
 python-dotenv>=1.0.0
